<resources>
    <string name="app_name">PMC</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="scan">Scan</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="create">Create</string>
    <string name="remove_authorization">Remove Authorization</string>
    <string name="export">Export</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
</resources>